--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://jaypatel0234:Jaydb369@cluster0.akdjjzz.mongodb.net/
+MONGO_URI=mongodb+srv://jaypatel0234:<password>@cluster0.akdjjzz.mongodb.net/
 TOKEN_SECRET=firstnextjsapp
 DOMAIN=http://localhost:3001
